Jobs consistency on SCVO

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -21,8 +21,8 @@ $footer-font-weight:                400;
 $colours: (
 default: (
 primary: #AD1457,
-primary-overlay-start: rgba(173,20,87,0.89),
-primary-overlay-end: rgba(173,20,87,0.91),
+primary-overlay-start: rgba(173, 20, 87, 0.89),
+primary-overlay-end: rgba(173, 20, 87, 0.91),
 primary-light: #C2185B,
 primary-dark: #880E4F,
 secondary: #FF8F00,
@@ -31,8 +31,8 @@ secondary-dark: #FF6F00
 ),
 charity: (
 primary: #4527A0,
-primary-overlay-start: rgba(69,39,160,0.89),
-primary-overlay-end: rgba(69,39,160,0.91),
+primary-overlay-start: rgba(69, 39, 160, 0.89),
+primary-overlay-end: rgba(69, 39, 160, 0.91),
 primary-light: #512DA8,
 primary-dark: #311B92,
 secondary: #FF8F00,
@@ -40,29 +40,29 @@ secondary-light: #FFA000,
 secondary-dark: #FF6F00
 ),
 jobs: (
-primary: #2e7d32,
-primary-overlay-start: rgba(46,125,50,0.89),
-primary-overlay-end: rgba(46,125,50,0.91),
-primary-light: #388E3C,
-primary-dark: #1b5e20,
-secondary: #ff8f00,
-secondary-light: #ffa000,
+primary: #42842A,
+primary-overlay-start: rgba(66, 132, 42, 0.89),
+primary-overlay-end: rgba(66, 132, 42, 0.91),
+primary-light: #42842A,
+primary-dark: #244817,
+secondary: #FF8F00,
+secondary-light: #FFA000,
 secondary-dark: #FF6F00
 ),
 goodmoves: (
-primary: #58a934,
-primary-overlay-start: rgba(88,169,52,0.89),
-primary-overlay-end: rgba(88,169,52,0.91),
-primary-light: #58a934,
-primary-dark: #58a934,
+primary: #42842A,
+primary-overlay-start: rgba(66, 132, 42, 0.89),
+primary-overlay-end: rgba(66, 132, 42, 0.91),
+primary-light: #42842A,
+primary-dark: #244817,
 secondary: #FF8F00,
 secondary-light: #FFA000,
 secondary-dark: #FF6F00
 ),
 funding: (
 primary: #00796A,
-primary-overlay-start: rgba(0,121,106,0.89),
-primary-overlay-end: rgba(0,121,106,0.91),
+primary-overlay-start: rgba(0, 121, 106, 0.89),
+primary-overlay-end: rgba(0, 121, 106, 0.91),
 primary-light: #198678,
 primary-dark: #006054,
 secondary: #FF8F00,
@@ -71,8 +71,8 @@ secondary-dark: #FF6F00
 ),
 projects: (
 primary: #AD1457,
-primary-overlay-start: rgba(173,20,87,0.89),
-primary-overlay-end: rgba(173,20,87,0.91),
+primary-overlay-start: rgba(173, 20, 87, 0.89),
+primary-overlay-end: rgba(173, 20, 87, 0.91),
 primary-light: #C2185B,
 primary-dark: #880E4F,
 secondary: #FF8F00,
@@ -81,8 +81,8 @@ secondary-dark: #FF6F00
 ),
 posts: (
 primary: #D84315,
-primary-overlay-start: rgba(216,67,21,0.89),
-primary-overlay-end: rgba(216,67,21,0.91),
+primary-overlay-start: rgba(216, 67, 21, 0.89),
+primary-overlay-end: rgba(216, 67, 21, 0.91),
 primary-light: #E64A19,
 primary-dark: #BF360C,
 secondary: #FF8F00,
@@ -91,8 +91,8 @@ secondary-dark: #FF6F00
 ),
 goodhq: (
 primary: #4033E9,
-primary-overlay-start: rgba(64,51,233,0.89),
-primary-overlay-end: rgba(64,51,233,0.91),
+primary-overlay-start: rgba(64, 51, 233, 0.89),
+primary-overlay-end: rgba(64, 51, 233, 0.91),
 primary-light: #4033E9,
 primary-dark: #160AAD,
 secondary: #FF8F00,
@@ -101,8 +101,8 @@ secondary-dark: #FF6F00
 ),
 digital-charter: (
 primary: #022347,
-primary-overlay-start: rgba(2,35,71,0.89),
-primary-overlay-end: rgba(2,35,71,0.91),
+primary-overlay-start: rgba(2, 35, 71, 0.89),
+primary-overlay-end: rgba(2, 35, 71, 0.91),
 primary-light: #022347,
 primary-dark: #022347,
 secondary: #FF8F00,
@@ -111,8 +111,8 @@ secondary-dark: #FF6F00
 ),
 tfn: (
 primary: #3b9db1,
-primary-overlay-start: rgba(59,157,177,0.89),
-primary-overlay-end: rgba(59,157,177,0.91),
+primary-overlay-start: rgba(59, 157, 177, 0.89),
+primary-overlay-end: rgba(59, 157, 177, 0.91),
 primary-light: #3b9db1,
 primary-dark: #3b9db1,
 secondary: #FF8F00,
@@ -1053,9 +1053,11 @@ section.search {
       position: absolute;
       top: 0;
       right: 0;
+      height: $unit*2;
+      width: $unit*2;
       .fa-search {
-        font-size: $unit*1.5;
         color: #333;
+        height: $unit*1.25;
         font-size: 1.5rem;
       }
     }
@@ -2699,7 +2701,7 @@ table.membership-fees {
   }
   .goodmoves .mdc-card__media,
   .goodmoves-brand .mdc-card__media {
-    background-color: #58a934 !important;
+    background-color: #42842A !important;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/goodmoves.png');
     background-size: 60%;
     background-position: left center;
@@ -2709,7 +2711,7 @@ table.membership-fees {
     background-size: unset;
   }
   .cjs-brand .mdc-card__media {
-    background-color: #f1f1f1 !important;
+    background-color: #e6e6e6 !important;
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs-logo.png');
     background-size: contain;
   }
