--- a/sites/configurations/scvo/templates/account/login.hbs
+++ b/sites/configurations/scvo/templates/account/login.hbs
@@ -36,7 +36,7 @@
       </div>
       <div class="card-loader" id="login-loader">
         <div class="card-loader-inner">
-          <span class="far fa-2x fa-spinner fa-spin"></span>
+          <span class="far fa-2x fa-circle-notch fa-spin"></span>
         </div>
       </div>
     </div>
@@ -55,9 +55,10 @@
         var password = $password.val();
         $loader.css('display', 'flex');
         evt.preventDefault();
-        scvo.app.auth().signInWithEmailAndPassword(email, password).then(function(user) {
+        
+        cjsFirebase.auth().signInWithEmailAndPassword(email, password).then(function(user) {
           if (user) {
-            window.location.href = '/';
+            window.location.href = '/jobs/community-jobs-scotland';
           } else {
             $message.text('Something went wrong, logged in but no user?').show();
             $loader.css('display', 'none');
