--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -382,6 +382,10 @@ footer h3,
   margin: $unit*1.5 0;
   .x-items {
     margin-top: 0;
+    .responsive-img {
+      width: 100%;
+      max-width: 728px;
+    }
   }
   .mdc-card {
     padding: $unit;
