--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -382,10 +382,6 @@ footer h3,
   margin: $unit*1.5 0;
   .x-items {
     margin-top: 0;
-    .responsive-img {
-      width: 100%;
-      max-width: 728px;
-    }
   }
   .mdc-card {
     padding: $unit;
@@ -438,6 +434,11 @@ footer h3,
   .x-item {
     line-height: 0;
     display: inline-block;
+    .responsive-img {
+      width: 100%;
+      max-width: 728px;
+      height: auto;
+    }
   }
   .x-item-side {
     display: inline-flex;
@@ -581,6 +582,7 @@ a {
   color: $mdc-theme-secondary-dark;
   padding: $unit/3 $unit/2;
   box-sizing: border-box;
+  border-radius: 2px;
 }
 .goodmoves-organisation-search .search-info {
   margin-bottom: $unit*1.5;
