--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -13,6 +13,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
+          {{#compare request.cookies.cjs_token "===" "" ~}}
           <p>
             Please contact your local Jobcentre Plus or Skills Development Scotland advisor to access a CJS application form.
           </p>
@@ -21,14 +22,18 @@
             <a href="http://los.direct.gov.uk">Find your nearest Jobcentre Plus</a>
           </p>
           <p>
-            If you work for SDS or JCP please <a href="http://jobs.scvo.org.uk/Account/Login">log in here</a> to start the referral/application process.
+            If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/login?vacancy={{Id}}">log in here</a> to start the referral/application process.
           </p>
+          {{else}}
+          {{#with data.primaryResponse.hits.hits.[0]._source ~}}
           <p>
-             <a href="/privacy/community-jobs-scotland" target="_blank" rel="noopener">Read our full privacy notice</a>.
+            Further details for {{{title}}}
           </p>
-          <!-- {{#with data.primaryResponse.hits.hits.[0]._source ~}}
-          Apply for {{{title}}}
-          {{/with ~}} -->
+          {{/with ~}}
+          {{/compare ~}}
+          <p>
+             Read our full <a href="/privacy/community-jobs-scotland" target="_blank" rel="noopener">Privacy Notice</a>.
+          </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
           {{> sidebar_cjs_search}}
