--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -989,15 +989,15 @@ figure {
   }
 }
 
-.login-form {
-  margin: 10vh auto;
-  .mdc-card {
-    position: relative;
-  }
-  #login-message {
-    display: none;
-  }
-}
+// .login-form {
+//   margin: 10vh auto;
+//   .mdc-card {
+//     position: relative;
+//   }
+//   #login-message {
+//     display: none;
+//   }
+// }
 
 .card-loader {
   position: absolute;
