--- a/sites/configurations/scvo/templates/account/cjs-login.hbs
+++ b/sites/configurations/scvo/templates/account/cjs-login.hbs
@@ -1,48 +1,53 @@
-<form id="login-form" method="POST" class="login-form">
-  <div class="mdc-card">
-    <div class="mdc-card__info--vacancy">
-      <div class="mdc-card__info--vacancy-title mdc-typography--headline4">
+<div class="cjs-job">
+  {{> header_splash}}
+  <div class="container-fluid page-content">
+    <ul class="breadcrumbs">
+      <li><a href="/">Home</a></li>
+      <li><a href="/jobs">Jobs</a></li>
+      <li><a href="/jobs/community-jobs-scotland">Community Jobs Scotland</a></li>
+      <li><a href="/jobs/community-jobs-scotland/vacancies">Vacancies</a></li>
+      <li>Login</li>
+    </ul>
+    <form id="login-form" method="POST" class="login-form">
+      <div class="mdc-typography--headline5">
         Login
       </div>
-    </div>
-    <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="login-message">
-      <span id="form-message"></span>
-    </div>
-    {{#if request.params.query.vacancy ~}}
-    <input type="hidden" name="vacancy" id="vacancy" value="{{request.params.query.vacancy}}" />
-    {{/if ~}}
-    <div class="mdc-typography--body1" id="form-section-email">
-      <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-        <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-        <input type="text" id="login-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="login-email">
-          Email
-        </label>
-        <div class="mdc-line-ripple"></div>
+      <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="login-message">
+        <span id="form-message"></span>
       </div>
-      <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-        <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-        <input type="password" id="login-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="login-password">
-          Password
-        </label>
-        <div class="mdc-line-ripple"></div>
+      <div class="mdc-typography--body1" id="form-section-email">
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
+          <input type="text" id="login-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="login-email">
+            Email
+          </label>
+          <div class="mdc-line-ripple"></div>
+        </div>
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+          <input type="password" id="login-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="login-password">
+            Password
+          </label>
+          <div class="mdc-line-ripple"></div>
+        </div>
       </div>
-    </div>
-    <div class="mdc-card__actions" id="form-section-login-buttons">
-      <div class="mdc-card__action-buttons">
-        <button class="mdc-button mdc-card__action mdc-card__action--button" type="submit" id="login-submit">
-          Login
-        </button>
+      <div class="mdc-card__actions" id="form-section-login-buttons">
+        <div class="mdc-card__action-buttons">
+          <button class="mdc-button mdc-card__action mdc-card__action--button" type="submit" id="login-submit">
+            Login
+          </button>
+        </div>
       </div>
-    </div>
-    <div class="card-loader" id="login-loader">
-      <div class="card-loader-inner">
-        <span class="far fa-2x fa-circle-notch fa-spin"></span>
+      <div class="card-loader" id="login-loader">
+        <div class="card-loader-inner">
+          <span class="far fa-2x fa-circle-notch fa-spin"></span>
+        </div>
       </div>
-    </div>
+    </form>
   </div>
-</form>
+</div>
 <script>
 document.addEventListener("DOMContentLoaded", function(event) {
   var $form = $('#login-form');
@@ -60,7 +65,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 
     cjsFirebase.auth().signInWithEmailAndPassword(email, password).then(function(user) {
       if (user) {
-        window.location.href = '/jobs/community-jobs-scotland/vacancies';
+        window.location.href = '{{replace request.params.query.vacancy "_" "/"}}';
       } else {
         $message.text('Something went wrong, logged in but no user?').show();
         $loader.css('display', 'none');
