--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -13,7 +13,13 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
-          {{#compare request.cookies.cjs_token "===" "" ~}}
+          {{#if data.auth ~}}
+          {{#with data.primaryResponse.hits.hits.[0]._source ~}}
+          <p>
+            Further details for {{{title}}}
+          </p>
+          {{/with ~}}
+          {{else}}
           <p>
             Please contact your local Jobcentre Plus or Skills Development Scotland advisor to access a CJS application form.
           </p>
@@ -22,15 +28,10 @@
             <a href="http://los.direct.gov.uk">Find your nearest Jobcentre Plus</a>
           </p>
           <p>
-            If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/login?vacancy={{Id}}">log in here</a> to start the referral/application process.
+            If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/login?vacancy={{replace request.url.path "/" "_"}}">log in here</a> to start the referral/application process.
           </p>
-          {{else}}
-          {{#with data.primaryResponse.hits.hits.[0]._source ~}}
-          <p>
-            Further details for {{{title}}}
-          </p>
-          {{/with ~}}
-          {{/compare ~}}
+          {{/if ~}}
+          <hr />
           <p>
              Read our full <a href="/privacy/community-jobs-scotland" target="_blank" rel="noopener">Privacy Notice</a>.
           </p>
