CJS auth setup done

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1585,8 +1585,19 @@ form#settled_status {
     padding: 0;
   }
   .mdc-toolbar__section.toolbar-menu,
+  .toolbar-user,
   .mdc-toolbar__row.toolbar-nav {
     height: $nav-height;
+  }
+  .mdc-menu-anchor {
+    .mdc-button {
+      text-transform: none;
+      background: transparent;
+      padding-right: 0;
+    }
+    #user-menu {
+      top: $nav-height !important;
+    }
   }
   .toolbar-nav {
     min-height: $nav-height;
