--- a/sites/configurations/scvo/templates/account/cjs-logout.hbs
+++ b/sites/configurations/scvo/templates/account/cjs-logout.hbs
@@ -9,12 +9,8 @@
       <li>Login</li>
     </ul>
     <form id="logout-form" method="POST" class="logout-form">
-      <div class="mdc-card">
-        <div class="mdc-card__info--vacancy">
-          <div class="mdc-card__info--vacancy-title mdc-typography--headline5">
-            Logging out&hellip;
-          </div>
-        </div>
+      <div class="mdc-typography--headline5">
+        Logging out&hellip;
       </div>
     </form>
   </div>
@@ -24,7 +20,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
   window.setTimeout(function() {
     cjsFirebase.auth().signOut().then(function() {
       window.location.href = '/jobs/community-jobs-scotland/vacancies/login';
-      setCookie('gm_token');
+      setCookie('cjs_token');
     }).catch(function(err) {
       console.error('Error logging out:', err);
     });
