--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -28,7 +28,7 @@
             <a href="http://los.direct.gov.uk">Find your nearest Jobcentre Plus</a>
           </p>
           <p>
-            If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/login?vacancy={{replace request.url.path "/" "_"}}">log in here</a> to start the referral/application process.
+            If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/login?vacancy={{replace (replace request.url.path "/jobs/community-jobs-scotland/vacancies/" "") "/" "_"}}">log in here</a> to start the referral/application process.
           </p>
           {{/if ~}}
           <hr />
