--- a/sites/configurations/scvo/templates/account/cjs-login.hbs
+++ b/sites/configurations/scvo/templates/account/cjs-login.hbs
@@ -65,7 +65,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 
     cjsFirebase.auth().signInWithEmailAndPassword(email, password).then(function(user) {
       if (user) {
-        window.location.href = '{{replace request.params.query.vacancy "_" "/"}}';
+        window.location.href = '/jobs/community-jobs-scotland/vacancies/{{replace request.params.query.vacancy "_" "/"}}';
       } else {
         $message.text('Something went wrong, logged in but no user?').show();
         $loader.css('display', 'none');
