--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -16,7 +16,10 @@
           {{#if data.auth ~}}
           {{#with data.primaryResponse.hits.hits.[0]._source ~}}
           <p>
-            Further details for {{{title}}}
+            Error: contact fields not found for {{{title}}}
+          </p>
+          <p>
+            Error: application forms not found for {{{title}}}
           </p>
           {{/with ~}}
           {{else}}
