cjs auth styling

--- a/sites/configurations/scvo/templates/account/cjs-login.hbs
+++ b/sites/configurations/scvo/templates/account/cjs-login.hbs
@@ -1,5 +1,5 @@
 <div class="cjs-job">
-  {{> header_splash}}
+  {{> header_splash headerTextOverride="CJS vacancies" typeOverride="page"}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
@@ -9,7 +9,7 @@
       <li>Login</li>
     </ul>
     <form id="login-form" method="POST" class="login-form">
-      <div class="mdc-typography--headline5">
+      <div class="mdc-typography--title">
         Login
       </div>
       <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="login-message">
