--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -15,12 +15,50 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
           {{#if data.auth ~}}
           {{#with data.primaryResponse.hits.hits.[0]._source ~}}
+          <h3>Contact Details</h3>
+          <ul class="fa-ul">
+            {{#if supervisor.name ~}}
+            <li>
+              <span class="fa-li"><i class="far fa-user-alt"></i></span>
+              {{{supervisor.name}}}
+            </li>
+            {{/if ~}}
+            {{#if supervisor.name ~}}
+            <li>
+              <span class="fa-li"><i class="far fa-envelope"></i></span>
+              <a href="mailto:{{{supervisor.email}}}">{{{supervisor.name}}}</a>
+            </li>
+            {{/if ~}}
+            {{#if supervisor.phone ~}}
+            <li>
+              <span class="fa-li"><i class="far fa-phone"></i></span>
+              {{{supervisor.phone}}}
+            </li>
+            {{/if ~}}
+            {{#ifAny organisation.street organisation.area_town organisation.city_county organisation.postcode ~}}
+            <li>
+              <span class="fa-li"><i class="far fa-phone"></i></span>
+              {{#if organisation.street}}{{{organisation.street}}}, {{/if}}
+              {{#if organisation.area_town}}{{{organisation.area_town}}}, {{/if}}
+              {{#if organisation.city_county}}{{{organisation.city_county}}}, {{/if}}
+              {{#if organisation.postcode}}{{{organisation.postcode}}}{{/if}}
+            </li>
+            {{#ifAny ~}}
+          </ul>
+
+          <h3>Referral methods including arrangement details</h3>
           <p>
-            Error: contact fields not found for {{{title}}}
+            {{{application_arrangements}}}
           </p>
+
+          <h3>Additional application arrangements</h3>
           <p>
-            Error: application forms not found for {{{title}}}
+            {{{application_notes}}}
           </p>
+
+          <h3>Application forms</h3>
+
+
           {{/with ~}}
           {{else}}
           <p>
