--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -35,15 +35,13 @@
               {{{supervisor.phone}}}
             </li>
             {{/if ~}}
-            {{#ifAny organisation.street organisation.area_town organisation.city_county organisation.postcode ~}}
             <li>
-              <span class="fa-li"><i class="far fa-phone"></i></span>
+              <span class="fa-li"><i class="far fa-building"></i></span>
               {{#if organisation.street}}{{{organisation.street}}}, {{/if}}
               {{#if organisation.area_town}}{{{organisation.area_town}}}, {{/if}}
               {{#if organisation.city_county}}{{{organisation.city_county}}}, {{/if}}
               {{#if organisation.postcode}}{{{organisation.postcode}}}{{/if}}
             </li>
-            {{#ifAny ~}}
           </ul>
 
           <h3>Referral methods including arrangement details</h3>
