--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -44,15 +44,19 @@
             </li>
           </ul>
 
+          {{#if application_arrangements ~}}
           <h3>Referral methods including arrangement details</h3>
           <p>
             {{{application_arrangements}}}
           </p>
+          {{/if ~}}
 
+          {{#if application_notes ~}}
           <h3>Additional application arrangements</h3>
           <p>
             {{{application_notes}}}
           </p>
+          {{/if ~}}
 
           <h3>Application forms</h3>
 
