--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -23,10 +23,10 @@
               {{{supervisor.name}}}
             </li>
             {{/if ~}}
-            {{#if supervisor.name ~}}
+            {{#if supervisor.email ~}}
             <li>
               <span class="fa-li"><i class="far fa-envelope"></i></span>
-              <a href="mailto:{{{supervisor.email}}}">{{{supervisor.name}}}</a>
+              <a href="mailto:{{{supervisor.email}}}">{{{supervisor.email}}}</a>
             </li>
             {{/if ~}}
             {{#if supervisor.phone ~}}
