--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -59,7 +59,59 @@
           {{/if ~}}
 
           <h3>Application forms</h3>
-
+          <ul class="mdc-list downloads">
+            {{#compare organisation.name "===" "Kibble" ~}}
+            <li class="mdc-list-item">
+              <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
+              <span class="mdc-list-item__text">
+                <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/Kibble%20Self%20Declaration%20Form.rtf" target="_blank">
+                  <span class="title">Kibble Self Declaration Form</span>
+                </a>
+              </span>
+            </li>
+            <li class="mdc-list-item">
+              <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
+              <span class="mdc-list-item__text">
+                <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/KibbleWorks%20Application%20Form%20(2015).doc" target="_blank">
+                  <span class="title">KibbleWorks Application Form</span>
+                </a>
+              </span>
+            </li>
+            {{else}}
+            <li class="mdc-list-item">
+              <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
+              <span class="mdc-list-item__text">
+                <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/JCP%20CJS%20Eligibility%20Referral%20v8.doc" target="_blank">
+                  <span class="title">JCP CJS Eligibility Referral Form</span>
+                </a>
+              </span>
+            </li>
+            <li class="mdc-list-item">
+              <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
+              <span class="mdc-list-item__text">
+                <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/JCP%20CJS%20Application%20v8.doc" target="_blank">
+                  <span class="title">JCP CJS Application</span>
+                </a>
+              </span>
+            </li>
+            <li class="mdc-list-item">
+              <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
+              <span class="mdc-list-item__text">
+                <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/Vulnerable%20Group%20Criteria%20v8.docx" target="_blank">
+                  <span class="title">Vulnerable group criteria</span>
+                </a>
+              </span>
+            </li>
+            <li class="mdc-list-item">
+              <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
+              <span class="mdc-list-item__text">
+                <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/SDS%20CJS%20Elig%20Ref%20Appl%20v8.doc" target="_blank">
+                  <span class="title">SDS CJS Eligibility Referral Application</span>
+                </a>
+              </span>
+            </li>
+            {{/if ~}}
+          </ul>
 
           {{/with ~}}
           {{else}}
@@ -76,7 +128,7 @@
           {{/if ~}}
           <hr />
           <p>
-             Read our full <a href="/privacy/community-jobs-scotland" target="_blank" rel="noopener">Privacy Notice</a>.
+            Read our full <a href="/privacy/community-jobs-scotland" target="_blank" rel="noopener">Privacy Notice</a>.
           </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
