--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -110,7 +110,7 @@
                 </a>
               </span>
             </li>
-            {{/if ~}}
+            {{/compare ~}}
           </ul>
 
           {{/with ~}}
