--- a/sites/configurations/scvo/templates/pages/page-jobs-landing.hbs
+++ b/sites/configurations/scvo/templates/pages/page-jobs-landing.hbs
@@ -18,7 +18,7 @@
                 </div>
               </form>
               <p>
-                Try: <a href="/jobs/search?region=East+of+Scotland">East of Scotland</a>, <a href="/jobs/search?role=Management">Management</a>, <a href="/jobs/search?sector=Social+Care">Social Care</a>
+                Try: <a href="/jobs/search?role=Management">Management</a>, <a href="/jobs/search?sector=Social+Care">Social Care</a>, <a href="/jobs/search?role=Board+Membership%2Ftrustee">Board Membership/trustee</a>
               </p>
             </section>
             <section class="mdc-card__actions">
@@ -38,7 +38,7 @@
             <section class="mdc-card__actions">
               <ul>
                 <li><a href="/jobs/community-jobs-scotland" class="mdc-action">Find out more</a></li>
-                <li><a href="http://jobs.scvo.org.uk" class="mdc-action">JCP & SDS vacancy access</a></li>
+                <li><a href="/jobs/community-jobs-scotland/vacancies/login" class="mdc-action">JCP & SDS vacancy access</a></li>
               </ul>
             </section>
           </div>
