--- a/sites/configurations/scvo/templates/pages/page-running-keystone.hbs
+++ b/sites/configurations/scvo/templates/pages/page-running-keystone.hbs
@@ -1,4 +1,4 @@
-<div class="page credit-union">
+<div class="page keystone">
   {{> header_splash}}
   <div class="container-fluid">
     {{> breadcrumbs}}
