--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -989,15 +989,10 @@ figure {
   }
 }
 
-// .login-form {
-//   margin: 10vh auto;
-//   .mdc-card {
-//     position: relative;
-//   }
-//   #login-message {
-//     display: none;
-//   }
-// }
+#login-form #login-loader,
+#login-form #login-message {
+  display: none;
+}
 
 .card-loader {
   position: absolute;
