--- a/sites/configurations/goodmoves/templates/account/login.hbs
+++ b/sites/configurations/goodmoves/templates/account/login.hbs
@@ -58,7 +58,7 @@
         goodmoves.app.auth().signInWithEmailAndPassword(email, password).then(function(user) {
           if (user) {
             console.log('Logged in:', user);
-            //window.location.href = '/';
+            window.location.href = '/';
           } else {
             $message.text('Something went wrong, logged in but no user?').show();
             $loader.css('display', 'none');
