--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -6,62 +6,67 @@
   </h1>
 
   <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
-    <li class="mdc-list-item">
+    <li class="mdc-list-item mdc-list-item--header">
       <span class="mdc-list-item__graphic far" aria-hidden="true"></span>
       <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
             <span class="mdc-list-item__text">
               <strong>Search name</strong>
-              <span class="mdc-list-item__secondary-text">
-                Search parameters
-              </span>
             </span>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
-            <span class="mdc-list-item__secondary-text">
-              Add to email alert
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+            <span class="mdc-list-item__text">
+              <strong>Send by email</strong>
+            </span>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+            <span class="mdc-list-item__text">
+              <strong>Delete</strong>
             </span>
           </div>
         </div>
       </div>
-      <span class="saved-search-remove mdc-list-item__meta" aria-hidden="true"></span>
     </li>
     {{#each data.saved_searches.items}}
-      {{!-- {{#querystring querystring}} --}}
-        <li class="mdc-list-item mdc-ripple-upgraded">
-          <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
-          <div class="mdc-layout-grid">
-            <div class="mdc-layout-grid__inner">
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
-                <span class="mdc-list-item__text">
-                  <a href="/search?{{{this.querystring}}}">{{name}}</a>
-                  <span class="mdc-list-item__secondary-text">
-                    {{this.querystring}}
-                  </span>
+      <li class="mdc-list-item mdc-ripple-upgraded">
+        <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
+        <div class="mdc-layout-grid">
+          <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-2-phone saved-search">
+              <span class="mdc-list-item__text">
+                <a href="/search?{{{this.querystring}}}">{{name}}</a>
+                <span class="mdc-list-item__secondary-text">
+                  {{this.querystring}}
                 </span>
-              </div>
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
-                <div class="mdc-switch">
-                  <input type="checkbox" id="email-switch-" class="mdc-switch__native-control" role="switch" checked="checked">
-                  <div class="mdc-switch__background">
-                    <div class="mdc-switch__knob"></div>
-                  </div>
+              </span>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+              <div class="mdc-switch">
+                <input type="checkbox" id="email-switch-{{@index}}" class="mdc-switch__native-control" role="switch" checked="checked">
+                <div class="mdc-switch__background">
+                  <div class="mdc-switch__knob"></div>
                 </div>
-                <label for="email-switch-">
-                  <span class="far fa-envelope"></span>
-                </label>
               </div>
+              <label for="email-switch-{{@index}}">
+                <span class="far fa-envelope fa-2x"></span>
+              </label>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
+              <button class="saved-search-remove mdc-icon-button" data-mdc-auto-init="MDCRipple">
+                <span class="far fa-trash-alt" aria-hidden="true"></span>
+              </button>
             </div>
           </div>
-          <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
-        </li>
-      {{!-- {{/querystring}} --}}
+        </div>
+      </li>
       {{#unless @last}}
         <li class="mdc-list-divider" role="separator"></li>
       {{/unless}}
     {{/each}}
   </ul>
+
+  <hr />
 
   <h2 class="mdc-typography--headline4 v-margin">
     Email alert preferences
