--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -4,44 +4,57 @@
 
 <div class="mdc-layout-grid head">
   <div class="mdc-layout-grid__inner">
-    <form class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" action="/save-search{{{@root.request.url.search}}}" method="POST">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
       {{#compare
-        (indexOf 
+        (indexOf
           (map @root.data.saved_searches.items (getProp 'querystring'))
-          (querystringify (obj) 
+          (querystringify (obj)
             keywords=@root.request.params.query.keywords
+            salary_min=@root.request.params.query.salary_min
+            salary_max=@root.request.params.query.salary_max
             roles=@root.request.params.query.roles
             sectors=@root.request.params.query.sectors
             statuses=@root.request.params.query.statuses
           )
         ) ">" -1
       }}
-        <strong>Search saved: </strong>
-        {{getProperty
+      <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon noselect" data-mdc-auto-init="MDCTextField">
+        <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input noselect" disabled="disabled"
+        value="{{getProperty
           (itemAt
             @root.data.saved_searches.items
-            (indexOf 
+            (indexOf
               (map @root.data.saved_searches.items (getProp 'querystring'))
-              (querystringify (obj) 
+              (querystringify (obj)
                 keywords=@root.request.params.query.keywords
+                salary_min=@root.request.params.query.salary_min
+                salary_max=@root.request.params.query.salary_max
                 roles=@root.request.params.query.roles
                 sectors=@root.request.params.query.sectors
                 statuses=@root.request.params.query.statuses
               )
             )
           ) 'name'
-        }}
-      {{else}}
-      <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon" data-mdc-auto-init="MDCTextField">
-        <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input">
-        <label for="saved-search-name" class="mdc-floating-label mdc-floating-label--float-above">Save search</label>
-        <button class="mdc-icon-button mdc-text-field__icon" tabindex="0" role="role">
-          <span class="far fa-save" aria-hidden="true"></span>
+        }}">
+        <label for="saved-search-name" class="mdc-floating-label mdc-floating-label--float-above noselect">Saved search</label>
+        <button class="mdc-icon-button mdc-text-field__icon noselect" tabindex="0">
+          <span class="far fa-check-square" aria-hidden="true"></span>
         </button>
         <div class="mdc-line-ripple"></div>
       </div>
+      {{else}}
+      <form class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" action="/save-search{{{@root.request.url.search}}}" method="POST">
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon" data-mdc-auto-init="MDCTextField">
+          <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input">
+          <label for="saved-search-name" class="mdc-floating-label mdc-floating-label--float-above">Save search</label>
+          <button class="mdc-icon-button mdc-text-field__icon" tabindex="0" role="role">
+            <span class="far fa-save" aria-hidden="true"></span>
+          </button>
+          <div class="mdc-line-ripple"></div>
+        </div>
+      </form>
       {{/compare}}
-    </form>
+    </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
       {{> pagination paging=data.search_data.detailed_results.pagination}}
     </div>
