Location tab on full vacancy view

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -843,6 +843,13 @@ a {
         margin-right: $unit;
       }
     }
+    .location-info {
+      .container-map {
+        height: 50vh;
+        padding: 0;
+        margin: 0;
+      }
+    }
   }
 }
 .goodmoves-event .mdc-card.full,
