--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -845,7 +845,7 @@ a {
     }
     .location-info {
       .container-map {
-        height: 50vh;
+        height: 40vh;
         padding: 0;
         margin: 0;
       }
@@ -1250,6 +1250,9 @@ body {
 }
 .gm-style .gm-style-iw {
   font-size: 0.9rem;
+  h3 {
+    margin-top: 0;
+  }
 }
 
 /* End Search results card */
