--- a/sites/configurations/goodmoves/templates/pages/browse.hbs
+++ b/sites/configurations/goodmoves/templates/pages/browse.hbs
@@ -7,7 +7,7 @@
         </div>
         <ul class="mdc-list">
           {{#each data.supplimentaryResponses.types.aggregations.roles_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/search?role={{urlencode key}}" role="menuitem">
+          <a class="mdc-list-item" href="/search?roles%5B%5D={{urlencode key}}" role="menuitem">
             <span class="mdc-list-item__text">
               {{#with (lookup ../data.supplimentaryResponses.types.aggregations.roles.buckets @index) ~}}
               {{{key}}}
@@ -26,7 +26,7 @@
         </div>
         <ul class="mdc-list">
           {{#each data.supplimentaryResponses.types.aggregations.sectors_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/search?sector={{urlencode key}}" role="menuitem">
+          <a class="mdc-list-item" href="/search?sectors%5B%5D={{urlencode key}}" role="menuitem">
             <span class="mdc-list-item__text">
               {{#with (lookup ../data.supplimentaryResponses.types.aggregations.sectors.buckets @index) ~}}
               {{{key}}}
@@ -45,7 +45,7 @@
         </div>
         <ul class="mdc-list">
           {{#each data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/search?status={{urlencode key}}" role="menuitem">
+          <a class="mdc-list-item" href="/search?statuses%5B%5D={{urlencode key}}" role="menuitem">
             <span class="mdc-list-item__text">
               {{#with (lookup ../data.supplimentaryResponses.types.aggregations.statuses.buckets @index) ~}}
               {{{key}}}
